2010-11-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests defs: $testsbuilddir is now AC_SUBST'ed.
	* tests/defs.in ($testsbuilddir): Substitute from @abs_builddir@.
	Add sanity check on $testsbuilddir, similar to those on
	$testsrcdir and $top_testsrcdir.

	Tests defs: do not print message "Running test $0" anymore.
	* tests/defs.in: Printing the message "=== Running test $0" at
	the beginning of each tests made sense when Automake used the old
	test-driver, which sent all the output directly to stdout/stderr.
	Now that the parallel test-driver is used, which saves output of
	each test in its correspoding log file, that old message is just
	useless noise.

	Tests defs: rename $curdir -> $testbuilddir
	* tests/defs.in: Rename $curdir to $testbuildir, for clarity and
	consistency with $testsrcdir and $top_testsrcdir.

	Tests defs: prefer "$curdir" over "`pwd`".
	* tests/defs.in: We already save the value of `pwd` in $curdir
	early in the file, so there no need to recalculate it later, when
	the current working directory is not changed.

	Tests defs: use `$me' in more error messages.
	* tests/defs.in: Also use `$me' in error messages referring to
	missing `defs' or `defs.in', since that variable is now defined
	before those checks.

	Tests defs: do not use `Exit' where plain `exit' suffices.
	* tests/defs.in: Use "exit 77" rather than "Exit 77" to skip the
	test when required libtool/gettext macros are not found, since
	such skips would take place before the exit trap is installed.

	Tests defs: improve and extends comments.
	* tests/defs.in: Improve and extends some comments, especially in
	relation with the changes introduced by the previous reordering.

	Tests defs: various reorderings.
	* tests/defs.in: Reordered various snippets of code in a
	clearer way.

2010-11-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	New tests on obsoleted usages of automake/autoconf macros (such
	as AC_INIT, AM_INIT_AUTOMAKE and AC_OUTPUT).