@@ -1,6 +1,6 @@
 aclocal-*
 automake-*
-defs
+defs-static
 instspc-tests.am
 parallel-tests.am
 *.dir
