@@ -1,5 +1,4 @@
 # -*- shell-script -*-
-# @configure_input@
 #
 # Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
 # 2005, 2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
@@ -17,112 +16,36 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Defines for Automake testing environment.
-# Tom Tromey <tromey@cygnus.com>
+## -------------------------------------------------------- ##
+##  Source static setup and definitions for the testsuite.  ##
+## -------------------------------------------------------- ##
 
+# Ensure we are running from the right directory.
+test -f ./defs-static || {
+   echo "$0: ./defs-static: not found in current directory" >&2
+   exit 1
+}
 
-## --------------------------------------------------------------------- ##
-##  Shell and environment sanitizing (plus some early initializations).  ##
-## --------------------------------------------------------------------- ##
-
-# Absolutely necessary variable(s).
-testsrcdir='@abs_srcdir@'
-top_testsrcdir='@abs_top_srcdir@'
-testbuilddir='@abs_builddir@'
-
-# Protect this file against multiple inclusion, useful for generated tests.
-if test x"$am_skip_defs" = xyes; then
-  unset am_skip_defs
-
-else # Do proper testcase setup.
-
-# Be more Bourne compatible.
-# (Snippet copied from configure's initialization in Autoconf 2.64)
-DUALCASE=1; export DUALCASE # for MKS sh
-if test -n "${ZSH_VERSION+set}" && (emulate sh) >/dev/null 2>&1; then
-  emulate sh
-  NULLCMD=:
-  # Pre-4.2 versions of Zsh do word splitting on ${1+"$@"}, which
-  # is contrary to our usage.  Disable this feature.
-  alias -g '${1+"$@"}'='"$@"'
-  setopt NO_GLOB_SUBST
-else
-  case `(set -o) 2>/dev/null` in *posix*) set -o posix;; esac
-fi
+# Source the shell sanitization and variables' definitions.
+. ./defs-static || exit 99
 
 # The name of the current test (without the `.test' suffix.)
 me=`echo "$0" | sed -e 's,.*[\\/],,;s/\.test$//'`
 
 
-## ----------------------------------------------------------- ##
-##  Initialization: AC_SUBST'ed and/or environment variables.  ##
-## ----------------------------------------------------------- ##
-
-APIVERSION='@APIVERSION@'
-PATH_SEPARATOR='@PATH_SEPARATOR@'
-
-# Make sure we override the user shell.
-SHELL='@SHELL@'; export SHELL
-# User can override various tools used.
-test -z "$PERL" && PERL='@PERL@'
-test -z "$MAKE" && MAKE=make
-test -z "$AUTOCONF" && AUTOCONF="@am_AUTOCONF@"
-test -z "$AUTOHEADER" && AUTOHEADER="@am_AUTOHEADER@"
-test -z "$AUTOUPDATE" && AUTOUPDATE=autoupdate
-test -z "$MISSING" && MISSING=$top_testsrcdir/lib/missing
-# Use -Werror because this also turns some Perl warnings into error.
-# (Tests for which this is inappropriate should use -Wno-error.)
-test -z "$ACLOCAL" && ACLOCAL="aclocal-$APIVERSION -Werror"
-# Extra flags to pass to aclocal before all other flags added by this script.
-ACLOCAL_TESTSUITE_FLAGS=''; export ACLOCAL_TESTSUITE_FLAGS
-
-# See how Automake should be run.  We put --foreign as the default
-# strictness to avoid having to create lots and lots of files.  A test
-# can override this by specifying a different strictness.  Use -Wall
-# -Werror by default.  Tests for which this is inappropriate
-# (e.g. when testing that a warning is enabled by a specific switch)
-# should use -Wnone or/and -Wno-error
-test -z "$AUTOMAKE" && AUTOMAKE="automake-$APIVERSION --foreign -Werror -Wall"
-
-# POSIX no longer requires 'egrep' and 'fgrep',
-# but some hosts lack 'grep -E' and 'grep -F'.
-EGREP='@EGREP@'
-FGREP='@FGREP@'
-
-# The amount we should wait after modifying files depends on the platform.
-# For instance, Windows '95, '98 and ME have 2-second granularity
-# and can be up to 3 seconds in the future w.r.t. the system clock.
-sleep='sleep @MODIFICATION_DELAY@'
-
-# An old timestamp that can be given to a file, in "touch -t" format.
-# The time stamp should be portable to all file systems of interest.
-# Just for fun, choose the exact time of the announcement of the GNU project
-# in UTC; see <http://www.gnu.org/gnu/initial-announcement.html>.
-old_timestamp=198309271735.59
-
-# Make our wrapper scripts accessible by default.
-PATH="$testbuilddir$PATH_SEPARATOR$PATH"; export PATH
-
-
-## -------------------------------------------------------- ##
-##  Initialization: sanity checks and environment cleanup.  ##
-## -------------------------------------------------------- ##
-
-# Ensure we are running from the right directory.
-test -f ./defs || {
-   echo "$me: ./defs: not found in current directory" >&2
-   exit 1
-}
+## ---------------------------------------- ##
+##  Sanity checks and environment cleanup.  ##
+## ---------------------------------------- ##
 
 # Ensure $testsrcdir is set correctly.
-test -f "$testsrcdir/defs.in" || {
-   echo "$me: $testsrcdir/defs.in not found, check \$testsrcdir" >&2
+test -f "$testsrcdir/defs-static.in" || {
+   echo "$me: $testsrcdir/defs-static.in not found, check \$testsrcdir" >&2
    exit 1
 }
 
 # Ensure $testbuilddir is set correctly.
-test -f "$testbuilddir/defs" || {
-   echo "$me: $testbuilddir/defs not found, check \$testbuilddir" >&2
+test -f "$testbuilddir/defs-static" || {
+   echo "$me: $testbuilddir/defs-static not found, check \$testbuilddir" >&2
    exit 1
 }
 
@@ -347,7 +270,7 @@ do
     tex)
       # No all versions of Tex support `--version', so we use
       # a configure check.
-      test -n "@TEX@" || exit 77
+      test -n "$TEX" || exit 77
       ;;
     texi2dvi-o)
       # Texi2dvi supports `-o' since Texinfo 4.1.
@@ -371,7 +294,7 @@ done
 # some third-party .m4 file is underquoted.
 case " $required " in
   *' libtool '* | *' libtoolize '* | *' gettext '* )
-    aclocaldir='@prefix@/share/aclocal'
+    aclocaldir=$testprefix/share/aclocal
     extra_includes=""
     if test -f $aclocaldir/dirlist; then
        extra_includes=`
@@ -427,7 +350,6 @@ mkdir $testSubDir
 
 cd ./$testSubDir
 
-sh_errexit_works=@sh_errexit_works@
 if test "$sh_errexit_works" = yes; then
   trap 'exit_status=$?
     set +e
@@ -477,5 +399,3 @@ done
 set -x
 
 pwd
-
-fi # Proper testcase setup.
