@@ -1,5 +1,17 @@
 2010-11-10  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Tests defs: move static definitions in a new file `defs-static'.
+	The new file is meant to be idempotent w.r.t. mutiple inclusions.
+	* tests/defs.in: Removed, its contents split among ...
+	* tests/defs-static.in: ... this new file ...
+	* tests/defs: ... and this new file, including the former.
+	* configure.ac (AC_CONFIG_FILES): Remove `tests/defs', add
+	`tests/defs-static'.
+	(AC_CONFIG_LINKS): Add `tests/defs'.
+	* tests/Makefile.am ($(parallel_tests)): Update.
+	($(instspc_tests)): Likewise.
+	* tests/.gitignore: Update.
+
 	Tests defs: $testsbuilddir is now AC_SUBST'ed.
 	* tests/defs.in ($testsbuilddir): Substitute from @abs_builddir@.
 	Add sanity check on $testsbuilddir, similar to those on
